--- a/client/src/components/landing/landing.css
+++ b/client/src/components/landing/landing.css
@@ -48,24 +48,17 @@
     color: rebeccapurple;
 }
 
-.message-enter {
+.card-enter {
     opacity: 0;
-    -webkit-transform: translateY(20px);
-    -ms-transform: translateY(20px);
-    transform: translateY(20px);
 }
-.message-enter-active {
+.card-enter-active {
     opacity: 1;
-    -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0);
+    transition: opacity 500ms ease-in;
 }
-.message-exit {
+.card-exit {
     opacity: 1;
-    transform: scale(1) translateY(0%);
 }
-.message-exit-active {
-    opacity: 0.01;
-    transform: scale(0.9) translateY(50%);
-    transition: all 300ms ease-out;
+.card-exit-active {
+    opacity: 0;
+    transition: opacity 500ms ease-in;
 }
