--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -1,6 +1,7 @@
 :root {
     --primary-color: #03A9F4;
-    --secondary-color: #fff
+    --secondary-color: #fff;
+    --blockBackground-color: #fafafa
 }
 
 html {
